fixing missing hamburger menu on mobile

--- a/assets/css/lavish-bootstrap.css
+++ b/assets/css/lavish-bootstrap.css
@@ -3943,7 +3943,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   background-color: #333333;
 }
 .navbar-inverse .navbar-toggle .icon-bar {
-  background-color: #ffffff;
+  background-color: #CCC;
 }
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
